[package]
name = "ping-360-testing"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluerobotics-ping = "0.3.3"
clap = "4.5.31"
tokio = "1.44.0"
tokio-serial = "5.4.5"
udp-stream = "0.0.12"
